Links heart animation to button-wink click event; Adds fade effect on heart; Adjusts viewport size to fix clipping and alignment issues.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -99,14 +99,5 @@ h1 {
    -webkit-transition: opacity .5s ease;*/
    visibility: hidden;
    opacity: 0;
-   transition: visibility 0s 1s, opacity 2s linear;
-   }
-#heart.pop {
-  /* opacity: 0;
-   transition: opacity .5s ease;
-   -moz-transition: opacity .5s ease;
-   -webkit-transition: opacity .5s ease;*/
-   visibility: visible;
-   opacity: 1;
-   transition: visibility 0s 1s, opacity 2s linear;
+   transition: visibility 0s 1.5s, opacity 1.2s linear;
    }
